[package]
name = "minimal-executor"
version = "0.4.1"
edition = "2021"
authors = ["Jiangkun Qiu <qiujiangkun@foxmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qiujiangkun/minimal-executor"
description = """A minimal executor for asynchronous tasks based on the futures-rs library."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam = { version = "0.8", default-features = false, features = ["alloc", "crossbeam-channel"] }
kanal = "0.1.0-pre7"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_local_pool"
harness = false
